[FIX] web: calendar popover style
This commit fixes some problems in the calendar view:
* event's style in the popover
* the scroll when the popover is at the bottom of the view
* the inner style of the popover to be able to scroll if too tall

Steps to reproduce:
* Open the Planning App
* Go on the month view if not already in
* Click on the "+X more" link
 => BUG the style and  the popover can't be scroll.

task-3833629

closes odoo/odoo#161734

X-original-commit: 6d2a6fd91296464f0c58747249e6e0543a16d98c

--- a/addons/web/static/src/views/calendar/calendar_controller.scss
+++ b/addons/web/static/src/views/calendar/calendar_controller.scss
@@ -26,6 +26,16 @@ $o-cw-filter-avatar-size: 20px;
 
     .o_calendar_wrapper {
         grid-area: 3 / 1 / 3 / 4;
+
+        &:has(.fc-popover) {
+            overflow: auto !important;
+
+            @include media-breakpoint-down(md) {
+                .o_actionswiper_overflow_container {
+                    overflow: visible !important;
+                }
+            }
+        }
     }
 }
 
